--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "prettier": "prettier --write 'src/**/*.{tsx,css,less}'"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.3.0",
     "@craco/craco": "^5.8.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.8.4",
+    "clsx": "^1.1.1",
     "craco-antd": "^1.19.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
