--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "craco-antd": "^1.19.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "web-vitals": "^0.2.4"
   },
@@ -30,6 +31,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.7.0",
     "@typescript-eslint/parser": "^4.7.0",
     "craco-alias": "^2.1.1",
