--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -4,7 +4,7 @@
     "paths": {
       "@assets/*": ["./assets/*"],
       "@containers/*": ["./containers/*"],
-      "@components/*": ["./components/*"],
+      "@components": ["./components/index.tsx"],
       "@utils": ["./utils"]
     }
   }
